--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       </div>
     </section>
     <section class="contact"></section>
+    <footer>
+      <p><!-- TIDY HTML IS DUMB AND KEPT DELETING THIS --></p>
+    </footer>
   </div><!-- container -->
 </body>
 </html>
